<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".auth.LoginActivity">

    <!--Управление видимостью форм для входа-->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/loginControl"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:constraint_referenced_ids="logo, loginBtn, logoDescription, logoName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Логотип-->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="80dp"
        android:src="@drawable/icon_logo"
        app:layout_constraintBottom_toTopOf="@id/logoName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <!--Название-->
    <TextView
        android:id="@+id/logoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_name"
        android:textAlignment="center"
        android:textColor="@color/main_app_color"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".85" />

    <!--Текст под названием-->
    <TextView
        android:id="@+id/logoDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoName" />

    <!--Опорта - центр экрана-->
    <View
        android:id="@+id/centerScreen"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Кнопка войти-->
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/login_btn"
        android:text="@string/loginBtn"
        app:backgroundTint="@color/main_app_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/centerScreen" />

    <!--Управление видимостью онбординга -->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/onBoardControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="onBoardBackground,onBoardingViewPager,indicatorsContainer,textSkip, viewCenterOfNext,imageNext,backgroundNextBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Подложка под онбординг    -->
    <ImageView
        android:id="@+id/onBoardBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Вью пейджер-->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/onBoardingViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/onboard_view_pager_background"
        app:layout_constraintBottom_toTopOf="@id/viewCenterOfNext"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Скрытие обводки сверху-->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main_app_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Индикатор страницы-->
    <LinearLayout
        android:id="@+id/indicatorsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageNext" />

    <!--Кнопка пропустить-->
    <TextView
        android:id="@+id/textSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:shadowColor="@color/black"
        android:shadowRadius="1"
        android:text="@string/text_skip"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Обводка кнопки-->
    <View
        android:id="@+id/backgroundNextBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/onboard_icon_outer_background"
        app:layout_constraintBottom_toBottomOf="@id/imageNext"
        app:layout_constraintEnd_toEndOf="@id/imageNext"
        app:layout_constraintStart_toStartOf="@id/imageNext"
        app:layout_constraintTop_toTopOf="@id/imageNext" />

    <!--центр кнопки-->
    <View
        android:id="@+id/viewCenterOfNext"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@id/imageNext"
        app:layout_constraintEnd_toEndOf="@id/imageNext"
        app:layout_constraintStart_toStartOf="@id/imageNext"
        app:layout_constraintTop_toTopOf="@id/imageNext" />

    <!--Кнопка вперед-->
    <ImageView
        android:id="@+id/imageNext"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/onboard_icon_background"
        android:src="@drawable/onboard_ic_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/custom_color_background" />


</androidx.constraintlayout.widget.ConstraintLayout>